@@ -29,6 +29,8 @@ FBINTF Change Log  version          (1.3-3 Build 12889) Sun, 24 Oct 2021 13:49:2
    The latter two return the Transaction Information block. The first two extract
    information the Transaction Information block
 
+6. New function TSQLTokeniser.ReadCharacters
+   Used internally.
 
 FBINTF Change Log  version          (1.3-2 Build 12889) Sun, 24 Oct 2021 13:49:28 +0100
 
